--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,7 @@ dependencies:
   flutter_typeahead: ^5.1.0
   font_awesome_flutter: ^10.8.0
   grouped_list: ^6.0.0
-  infinite_scroll_pagination: ^4.0.0
+  infinite_scroll_pagination: ^5.0.0
   keyboard_dismisser: ^3.0.0
   like_button: ^2.0.4
   local_auth: ^2.2.0
@@ -43,7 +43,7 @@ dependencies:
     git:
       url: https://github.com/clragon/sliding_sheet.git
       ref: 0.6.0
-  webview_flutter: ^4.3.2
+  webview_flutter: ^4.13.0
 
   # data
   app_links: ^6.3.3
@@ -56,29 +56,28 @@ dependencies:
   drift: ^2.25.1
   external_path: ^2.0.1
   filesize: ^2.0.1
-  file_picker: ^9.0.0
-  flutter_local_notifications: ^18.0.1
-  freezed_annotation: ^2.4.1
+  file_picker: ^10.1.9
+  flutter_local_notifications: ^19.2.1
+  freezed_annotation: ^3.0.0
   html_character_entities: ^1.0.0+1
   image_gallery_saver_plus: ^4.0.1
   json_annotation: ^4.9.0
   logging: ^1.2.0
   meta: ^1.15.0
-  mime: ^1.0.6
   mutex: ^3.0.1
   notified_preferences: ^2.0.0
   package_info_plus: ^8.2.1
   path: ^1.9.0
   path_provider: ^2.1.0
   path_to_regexp: ^0.4.0
-  permission_handler: ^11.1.0
+  permission_handler: ^12.0.0+1
   petitparser: ^6.0.2
   pub_semver: ^2.1.5
   recase: ^4.1.0
   relative_time: ^5.0.0
   rxdart: ^0.28.0
-  share_plus: ^10.1.4
-  sqlite3_flutter_libs: ^0.5.30
+  share_plus: ^11.0.0
+  sqlite3_flutter_libs: ^0.5.33
   store_checker: ^1.3.0
   url_launcher: ^6.1.12
   wakelock_plus: ^1.2.10
@@ -105,13 +104,13 @@ dev_dependencies:
   # dart run build_runner build --delete-conflicting-outputs
   build_runner: ^2.4.15
   drift_dev: ^2.25.2
-  flutter_lints: ^5.0.0
+  flutter_lints: ^6.0.0
   # dart run flutter_launcher_icons
   flutter_launcher_icons: ^0.14.3
   # dart run flutter_native_splash:create
-  flutter_native_splash: ^2.4.4
-  freezed: ^2.5.8
-  json_serializable: ^6.9.4
+  flutter_native_splash: ^2.4.6
+  freezed: ^3.0.6
+  json_serializable: ^6.9.5
 
 flutter:
   uses-material-design: true
