--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,7 +25,6 @@ dependencies:
   flutter_custom_tabs: ^2.0.0+1
   flutter_screen_lock: ^9.2.1
   flutter_sub: ^3.0.0
-  fquery: 1.5.4-beta.2
   flutter_sub_provider: ^3.0.0
   flutter_staggered_grid_view: ^0.7.0
   flutter_typeahead: ^5.1.0
@@ -82,6 +81,7 @@ dependencies:
   share_plus: ^11.0.0
   sqlite3_flutter_libs: ^0.5.33
   store_checker: ^1.3.0
+  shared_preferences: ^2.5.3
   url_launcher: ^6.1.12
   wakelock_plus: ^1.2.10
   webview_cookie_manager_plus: ^2.0.16
