--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   provider: ^6.1.2
   pull_to_refresh: ^2.0.0
   secure_app_switcher: ^1.0.0
+  skeletonizer: ^2.1.0+1
   sliding_sheet:
     git:
       url: https://github.com/clragon/sliding_sheet.git
