--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,10 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
-  intl: # sdk pins intl
+
+  # pinned by sdk
+  intl: any
+  meta: any
 
   # widgets
   animations: ^2.0.7
@@ -23,12 +26,12 @@ dependencies:
   media_kit_libs_video: ^1.0.0
   flutter_cache_manager: ^3.3.1
   flutter_custom_tabs: ^2.0.0+1
-  flutter_screen_lock: ^9.2.1
+  flutter_screen_lock: ^9.2.2+2
   flutter_sub: ^3.0.0
   flutter_sub_provider: ^3.0.0
   flutter_staggered_grid_view: ^0.7.0
   flutter_typeahead: ^5.1.0
-  font_awesome_flutter: ^10.8.0
+  font_awesome_flutter: ^10.9.0
   grouped_list: ^6.0.0
   infinite_scroll_pagination: ^5.1.0
   keyboard_dismisser: ^3.0.0
@@ -50,20 +53,19 @@ dependencies:
   async: ^2.11.0
   collection: ^1.19.0
   deep_pick: ^1.0.0
-  dio: ^5.8.0+1
+  dio: ^5.9.0
   dio_cache_interceptor: ^4.0.3
   http_cache_drift_store: ^7.0.0
-  drift: ^2.25.1
+  drift: ^2.28.1
   external_path: ^2.0.1
   filesize: ^2.0.1
-  file_picker: ^10.1.9
-  flutter_local_notifications: ^19.2.1
+  file_picker: ^10.2.4
+  flutter_local_notifications: ^19.4.0
   freezed_annotation: ^3.0.0
   html_character_entities: ^1.0.0+1
   image_gallery_saver_plus: ^4.0.1
   json_annotation: ^4.9.0
   logging: ^1.2.0
-  meta: ^1.15.0
   mime: ^2.0.0
   mutex: ^3.0.1
   notified_preferences: ^2.0.0
@@ -71,24 +73,24 @@ dependencies:
   path: ^1.9.0
   path_provider: ^2.1.0
   path_to_regexp: ^0.4.0
-  permission_handler: ^12.0.0+1
-  petitparser: ^6.0.2
+  permission_handler: ^12.0.1
+  petitparser: ^6.1.0
   pub_semver: ^2.1.5
   recase: ^4.1.0
   relative_time: ^5.0.0
   rxdart: ^0.28.0
   share_plus: ^11.0.0
-  sqlite3_flutter_libs: ^0.5.33
+  sqlite3_flutter_libs: ^0.5.39
   store_checker: ^1.3.0
-  url_launcher: ^6.1.12
+  url_launcher: ^6.3.2
   wakelock_plus: ^1.2.10
   webview_cookie_manager_plus: ^2.0.16
-  window_manager: ^0.4.3
-  workmanager: ^0.6.0
-  drift_flutter: ^0.2.4
+  window_manager: ^0.5.1
+  workmanager: ^0.9.0+2
+  drift_flutter: ^0.2.5
   media_scanner: ^2.2.0
-  saf_stream: ^0.11.2
-  saf_util: ^0.10.0
+  saf_stream: ^0.12.0
+  saf_util: ^0.11.0
 
 dev_dependencies:
   flutter_test:
