--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,16 @@ dependencies:
   # widgets
   animations: ^2.0.7
   cached_network_image: ^3.4.1
+  cached_query:
+    git:
+      url: https://github.com/D-James-GH/cached_query.git
+      ref: bbc8877
+      path: packages/cached_query
+  cached_query_flutter:
+    git:
+      url: https://github.com/D-James-GH/cached_query.git
+      ref: bbc8877
+      path: packages/cached_query_flutter
   expandable: ^5.0.1
   media_kit: ^1.1.6
   media_kit_video: ^1.1.7
@@ -94,6 +104,11 @@ dependencies:
   saf_util: ^0.10.0
 
 dependency_overrides:
+  cached_query:
+    git:
+      url: https://github.com/D-James-GH/cached_query.git
+      ref: bbc8877
+      path: packages/cached_query
   infinite_scroll_pagination:
     git:
       url: https://github.com/EdsonBueno/infinite_scroll_pagination.git
