added query filtering

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -83,6 +83,7 @@ dependencies:
   pub_semver: ^2.1.5
   recase: ^4.1.0
   relative_time: ^5.0.0
+  runtime_type: ^1.1.0
   rxdart: ^0.28.0
   share_plus: ^11.0.0
   sqlite3_flutter_libs: ^0.5.39
