--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   deep_pick: ^1.0.0
   dio: ^5.9.0
   dio_cache_interceptor: ^4.0.3
+  native_dio_adapter: ^1.3.1
   http_cache_drift_store: ^7.0.0
   drift: ^2.28.1
   external_path: ^2.0.1
